<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/item_cover"
        android:contentDescription="@string/placeholder_song_cover_contentdesc"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:src="@drawable/fallback_album"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/item_cover"
        android:layout_toStartOf="@id/item_more_options">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_song_title"
            android:id="@+id/item_title"
            style="@style/text_fat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_song_information"
            android:layout_below="@id/item_title"
            android:layout_marginTop="4dp"
            android:id="@+id/item_information"
            style="@style/text"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/char_vertical_ellipsis"
        android:padding="10dp"
        android:id="@+id/item_more_options"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        style="@style/text_huge"/>

</RelativeLayout>