<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="250dp"
        android:contentDescription="@string/app_name"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:src="@drawable/icon_naked" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:paddingStart="33dip"
        android:paddingEnd="33dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:id="@+id/btn_with_spotify"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/spotify"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:src="@drawable/spotify_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/text_big"
            android:text="@string/sign_in_spotify"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_without_spotify"
        android:layout_marginBottom="65dp"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_without_spotify"
        style="@style/text" />


</RelativeLayout>